--- a/Api.Data/Api.Data.csproj
+++ b/Api.Data/Api.Data.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Api.Domain\Api.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
